--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="540"
-    android:viewportHeight="540">
+    android:viewportWidth="512"
+    android:viewportHeight="512">
   <path
-      android:pathData="M0,0h540v540h-540z"
-      android:fillColor="#FEF7EC"/>
+      android:pathData="M0,0h512v512h-512z"
+      android:fillColor="#ffffff"/>
 </vector>
