--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -8,6 +8,13 @@
     <dimen name="icon_advice_margin_bottom">12dp</dimen>
     <dimen name="advice_margin_top">20dp</dimen>
     <dimen name="padding_button">10dp</dimen>
+    <dimen name="margin_top_setting_menu">12dp</dimen>
+    <dimen name="margin_top_between_setting_menu_title">20dp</dimen>
+    <dimen name="margin_top_between_setting_menu">8dp</dimen>
+
+    <dimen name="billing_margin">16dp</dimen>
+    <dimen name="billing_price_margin_top">4dp</dimen>
+    <dimen name="bill_margin_elements">12dp</dimen>
 
     <dimen name="app_name_text_size">24sp</dimen>
     <dimen name="button_text_size">14sp</dimen>
