--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -28,5 +28,35 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
+    <style name="SettingsTitleText">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/advice_text_text_size</item>
+        <item name="android:fontFamily">@font/nunito_semibold</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="SettingsCategoryText">
+        <item name="android:textColor">@color/grey</item>
+        <item name="android:textSize">@dimen/advice_id_text_size</item>
+        <item name="android:fontFamily">@font/nunito_sans</item>
+    </style>
+
+    <style name="SettingsMenuText">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/advice_text_text_size</item>
+        <item name="android:fontFamily">@font/nunito_sans</item>
+    </style>
+
+    <style name="ResultTotalText">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/advice_id_text_size</item>
+        <item name="android:fontFamily">@font/nunito_sans</item>
+    </style>
+
+    <style name="ResultSumText">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/advice_text_text_size</item>
+        <item name="android:fontFamily">@font/nunito_sans</item>
+    </style>
 
 </resources>
