--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,5 +22,26 @@
         <action
             android:id="@+id/action_settingsFragment_to_adviceFragment"
             app:destination="@id/adviceFragment" />
+        <action
+            android:id="@+id/action_settingsFragment_to_webFragment"
+            app:destination="@id/webFragment">
+            <argument
+                android:name="fileName"
+                app:argType="string"
+                android:defaultValue="privacy" />
+        </action>
+    </fragment>
+    <fragment
+        android:id="@+id/webFragment"
+        android:name="com.bejussi.dailyadvice.presentation.settings.WebFragment"
+        android:label="fragment_web"
+        tools:layout="@layout/fragment_web" >
+        <action
+            android:id="@+id/action_webFragment_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
+        <argument
+            android:name="fileName"
+            app:argType="string"
+            android:defaultValue="privacy" />
     </fragment>
 </navigation>
