--- a/app/src/main/res/layout/fragment_advice.xml
+++ b/app/src/main/res/layout/fragment_advice.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/background"
     android:id="@+id/layout"
     tools:context=".presentation.advice.AdviceFragment">
 
@@ -115,18 +115,6 @@
         app:layout_constraintBottom_toBottomOf="@+id/appName"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
         app:layout_constraintTop_toTopOf="@+id/topGuideline" />
-
-    <ImageButton
-        android:id="@+id/premuim_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:src="@drawable/star"
-        android:layout_marginEnd="@dimen/margin_icon_end"
-        app:layout_constraintBottom_toBottomOf="@+id/appName"
-        app:layout_constraintEnd_toStartOf="@+id/settings_button"
-        app:layout_constraintTop_toTopOf="@+id/topGuideline" />
-
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/shareAdviceButton"
